apps/corekeeper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corekeeper-server
  namespace: corekeeper
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: corekeeper
  ports:
    - name: game
      port: 27015
      protocol: UDP
